2013-06-01  Glenn Morris  <rgm@gnu.org>

	* eshell/em-cmpl.el (eshell-cmpl-initialize):
	Replace the obsolete alias pcomplete-arg-quote-list.

2013-06-01  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-mode-syntax-table): Give `.'
	punctuation syntax.
	(inferior-octave-minimal-columns)
	(inferior-octave-last-column-width): New variables.
	(inferior-octave-track-window-width-change): New function.
	(inferior-octave-mode): Adjust column width so that Octave output,
	for example from 'ls', can fit into the window nicely.

2013-05-31  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-syntax-expansion-allowed-p):
	Highlight expansions inside regexp literals.

2013-05-31  Glenn Morris  <rgm@gnu.org>

	* obsolete/sym-comp.el (symbol-complete):
	Replace obsolete completion-annotate-function.

	* progmodes/cc-vars.el (c-make-macro-with-semi-re): Silence compiler.

2013-05-31  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-syntax-expansion-allowed-p): New
	function, checks if point is inside a literal that allows
	expression expansion.
	(ruby-syntax-propertize-expansion): Use it.
	(ruby-syntax-propertize-function): Bind `case-fold-search' to nil
	around the body.

2013-05-30  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-mode-map): Bind `isearch-toggle-invisible'
	to "\M-si".
	(isearch-invisible): New variable.
	(isearch-forward): Doc fix.
	(isearch-mode): Set `isearch-invisible'
	to the value of `search-invisible'.
	(isearch-toggle-case-fold): Doc fix.
	(isearch-toggle-invisible): New command.
	(isearch-query-replace): Let-bind `search-invisible'
	to the value of `isearch-invisible'.
	(isearch-search): Use `isearch-invisible' instead of
	`search-invisible'.  Let-bind `search-invisible'
	to the value of `isearch-invisible'.  (Bug#11378)

2013-05-30  Juri Linkov  <juri@jurta.org>

	* replace.el (perform-replace): Avoid `isearch-range-invisible'
	call when `query-flag' is nil and `search-invisible' is non-nil.